added search bar

--- a/index.css
+++ b/index.css
@@ -63,3 +63,9 @@ h4 {
     cursor: pointer;
     margin: 10px;
 }
+
+.login {
+    padding: 4px 15px;
+    background-color: aliceblue;
+    cursor: pointer;
+}
