--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -72,4 +77,10 @@ h4 {
     padding: 4px 15px;
     background-color: aliceblue;
     cursor: pointer;
+}
+
+.vegIcon {
+    position: absolute;
+    font-size: 25px;
+    z-index: 4;
 }
